# merged

./: .gitattributes  .gitignore  docker-compose.yml  readme.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/workflows/: api.yml  client.yml  (+3 more)
api/: .env_sample  .gitignore  Dockerfile.prod  manage.py  pyproject.toml  readme.md  requirements.txt  start-prod.sh
api/api/: asgi.py  settings.py  urls.py  wsgi.py
api/api/settings/: base.py  prod.py  test.py
api/community/: admin.py  models.py  paginations.py  renderers.py  serializers.py  tests.py  urls.py  views.py
api/community/migrations/: 0001_initial.py  0002_alter_event_poster.py  0002_auto_20210503_1746.py  0002_auto_20210801_1122.py  0003_alter_event_organization.py  0003_alter_newsitem_id.py  0003_auto_20210503_1832.py  0004_alter_newsitem_id.py  0004_auto_20210503_2303.py  0004_auto_20210815_0358.py  0005_alter_newsitem_status.py  0005_auto_20210726_1753.py  0005_rename_draft_event_status.py  0006_alter_event_status.py  0006_auto_20210815_0402.py  0006_organization_slug.py  0007_auto_20210503_2342.py  0007_auto_20210815_0404.py  0008_auto_20210815_0412.py  0008_newsitem.py  0009_auto_20210815_0417.py  0010_auto_20210815_0428.py  0011_alter_newsitem_organizations.py  0012_category.py  0013_newsitem_categories.py  0014_alter_newsitem_status.py
client/: .env_sample  .eslintrc.js  .prettierrc.js  Dockerfile  Dockerfile.prod  README.md  babel.config.json  client.py  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json  types.ts
(+83 files in other folders)
