[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "1.4.4"
asgiref = "3.3.4"
click = "7.1.2"
Django = "3.2"
djangorestframework = "3.12.4"
mypy-extensions = "0.4.3"
pathspec = "0.8.1"
psycopg2 = "2.8.6"
pytz = "2021.1"
regex = "2021.4.4"
sqlparse = "0.4.1"
toml = "0.10.2"
typed-ast = "1.4.3"
typing-extensions = "3.7.4.3"

[tool.poetry.dev-dependencies]
black = "20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
